wncp/wncp-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wncp-backend
  name: wncp-backend
  namespace: wncp-test-11
spec:
  minReadySeconds: 120
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wncp-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wncp-backend
    spec:
      containers:
      - image: gcr.io/wn-cloud-275704/cloud-portal-service@sha256:d44480f23dc411a38b65c95e27508a3101c743f2392b2b98455cde237433e730
        imagePullPolicy: IfNotPresent
        name: cloud-portal-service-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
