wncp/wncp-fronend-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "19"
  creationTimestamp: "2020-05-03T20:17:15Z"
  generation: 19
  labels:
    app: wncp-fronend-2
  name: wncp-fronend-2
  namespace: wncp-test-11
spec:
  minReadySeconds: 60
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wncp-fronend-2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wncp-fronend-2
    spec:
      containers:
      - image: gcr.io/wn-cloud-275704/cloud-portal-frontend@sha256:682183a2ec81244cceb01c0d7cc8d52f0f86c46228248581cbb40b8dc737d027
        imagePullPolicy: IfNotPresent
        name: cloud-portal-frontend-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
