wncp/wncp-fronend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wncp-fronend
  name: wncp-fronend
  namespace: wncp-test-11
spec:
  # minReadySeconds: 60
  # progressDeadlineSeconds: 600
  replicas: 1
  # revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wncp-fronend
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: wncp-fronend
    spec:
      containers:
      - image: gcr.io/wn-cloud-275704/cloud-portal-frontend:2.7
        # imagePullPolicy: IfNotPresent
        name: cloud-portal-frontend-sha256-1
      imagePullSecrets:
      - name: gcr-json-key
        # resources: {}
        # terminationMessagePath: /dev/termination-log
        # terminationMessagePolicy: File
      # dnsPolicy: ClusterFirst
      # restartPolicy: Always
      # schedulerName: default-scheduler
      # securityContext: {}
      # terminationGracePeriodSeconds: 30
