wncp/wncp-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-05-03T20:05:50Z"
  labels:
    app: wncp-backend
  name: wncp-backend-service
  namespace: wncp
  resourceVersion: "1002939"
  selfLink: /api/v1/namespaces/wncp/services/wncp-backend-service
  uid: 7c9d1567-8d79-11ea-88ce-42010a8001f5
spec:
  clusterIP: 10.4.29.129
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32257
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wncp-backend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
