wncp/wncp-fronend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-05-03T20:17:42Z"
  labels:
    app: wncp-fronend
  name: wncp-fronend-service
  namespace: wncp
  resourceVersion: "1005857"
  selfLink: /api/v1/namespaces/wncp/services/wncp-fronend-service
  uid: 24fa3044-8d7b-11ea-88ce-42010a8001f5
spec:
  clusterIP: 10.4.30.4
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32625
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wncp-fronend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
